--- a/src/assets/FXML/LoginScene.fxml
+++ b/src/assets/FXML/LoginScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="820.0" prefWidth="1537.0">
         <children>
          <GridPane layoutX="31.0" layoutY="17.0" prefHeight="91.0" prefWidth="274.0">
@@ -55,7 +55,7 @@
                </TextField>
                <Button fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" prefHeight="60.0" prefWidth="419.0" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                </Button>
-               <Button fx:id="button_register_connexion" mnemonicParsing="false" onAction="#tryRegister" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
+               <Button fx:id="button_register_connexion" mnemonicParsing="false" onAction="#openRegisterPage" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
                </Button>
                <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                   <padding>
