--- a/src/assets/FXML/RegisterScene.fxml
+++ b/src/assets/FXML/RegisterScene.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="820.0" prefWidth="1537.0">
         <children>
             <GridPane layoutX="31.0" layoutY="17.0" prefHeight="91.0" prefWidth="274.0">
@@ -50,7 +50,7 @@
                     <RowConstraints maxHeight="122.39999999999998" minHeight="10.0" prefHeight="122.39999999999998" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <children>
-                    <TextField id="tf_inscription" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Nom d'utilisateur" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                    <TextField id="tf_inscription" fx:id="textfield_username_register" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Nom d'utilisateur" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                         <padding>
                             <Insets left="20.0" />
                         </padding>
@@ -83,12 +83,12 @@
                         </children>
                     </GridPane>
                     <Label id="title" text="Inscription" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                    <PasswordField maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                    <PasswordField fx:id="textfield_psswrd_register" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                         <padding>
                             <Insets left="20.0" />
                         </padding>
                     </PasswordField>
-                    <PasswordField layoutX="91.0" layoutY="500.0" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Confirmer le mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
+                    <PasswordField fx:id="textfield_psswrd_confirm_register" layoutX="91.0" layoutY="500.0" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Confirmer le mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
                         <padding>
                             <Insets left="20.0" />
                         </padding>
@@ -103,8 +103,8 @@
                         </rowConstraints>
                         <children>
                             <CheckBox mnemonicParsing="false" text="Accepter les CGU" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
-                            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="307.0" text="S'inscrire" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                     <Button id="back_button" mnemonicParsing="false" prefHeight="60.0" text="&lt; Retour" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                            <Button fx:id="button_register_register" mnemonicParsing="false" onAction="#tryRegister" prefHeight="60.0" prefWidth="307.0" text="S'inscrire" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                     <Button id="back_button" fx:id="button_back_register" mnemonicParsing="false" onAction="#openLoginPage" prefHeight="60.0" text="&lt; Retour" GridPane.rowIndex="1" GridPane.valignment="TOP">
                         <GridPane.margin>
                            <Insets left="10.0" />
                         </GridPane.margin>
