--- a/src/assets/FXML/AdminSceneUsers.fxml
+++ b/src/assets/FXML/AdminSceneUsers.fxml
@@ -44,13 +44,15 @@
                        <columnConstraints>
                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                        </columnConstraints>
                        <rowConstraints>
                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                        </rowConstraints>
                         <children>
                            <Button fx:id="button_home_adminpage1" mnemonicParsing="false" onAction="#loadUserTableAdmin" style="-fx-background-color: #61A2FF;" text="Load Users" />
-                           <Button mnemonicParsing="false" style="-fx-background-color: #61A2FF;" text="Export Users (CSV)" GridPane.columnIndex="1" />
+                           <Button mnemonicParsing="false" style="-fx-background-color: #61A2FF;" text="Export (CSV)" GridPane.columnIndex="2" />
+                           <Button fx:id="button_saveusers_adminpage" mnemonicParsing="false" style="-fx-background-color: #61A2FF;" text="Save to BDD" GridPane.columnIndex="1" />
                         </children>
                      </GridPane>
                   </children>
