--- a/src/assets/FXML/LoginScene.fxml
+++ b/src/assets/FXML/LoginScene.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -9,59 +9,73 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="820.0" prefWidth="1537.0">
-        <children>
-         <GridPane layoutX="31.0" layoutY="17.0" prefHeight="91.0" prefWidth="274.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.5333251953125" minWidth="10.0" prefWidth="100.73332214355469" />
-             <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.40001678466797" minWidth="10.0" prefWidth="173.2666778564453" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-            <children>
-                  <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-                          <Image url="@../Images/logo.png" />
-                      </image>
-                  </ImageView>
-               <Label id="statumun" text="Statumun" GridPane.columnIndex="1" />
-            </children>
-         </GridPane>
-         <GridPane layoutX="455.0" layoutY="135.0" prefHeight="550.0" prefWidth="628.0" style="-fx-background-color: #F4F4F4; -fx-background-radius: 43;">
-           <columnConstraints>
-               <ColumnConstraints />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-            <children>
-               <Label id="title" text="Connexion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-               <TextField fx:id="textfield_username_connexion" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                  <padding>
-                     <Insets left="20.0" />
-                  </padding>
-               </TextField>
-               <Button fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" prefHeight="60.0" prefWidth="419.0" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-               </Button>
-               <Button fx:id="button_register_connexion" mnemonicParsing="false" onAction="#openRegisterPage" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
-               </Button>
-               <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
-                  <padding>
-                     <Insets left="20.0" />
-                  </padding>
-               </PasswordField>
-            </children>
-         </GridPane>
-        </children>
-    </AnchorPane>
+<AnchorPane prefHeight="682.0" prefWidth="1116.0" stylesheets="@../CSS/current-styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutX="461.0" layoutY="216.0" prefHeight="200.0" prefWidth="200.0" styleClass="login-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <VBox alignment="TOP_CENTER" prefHeight="528.0" prefWidth="562.0" styleClass="login-box">
+               <children>
+                  <Label styleClass="login-box-title" text="Connexion">
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="userInput" maxWidth="250.0" minHeight="36.0" promptText="Mail" styleClass="login-inputs">
+                     <VBox.margin>
+                        <Insets top="35.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <PasswordField fx:id="passordInput" maxWidth="250.0" minHeight="36.0" promptText="Password" styleClass="login-inputs">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </PasswordField>
+                  <Button fx:id="coonecterBtn" mnemonicParsing="false" text="Se Connecter">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                     <styleClass>
+                        <String fx:value="login-button" />
+                        <String fx:value="login-button-top" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="inscrireBtn" layoutX="185.0" layoutY="108.0" mnemonicParsing="false" text="S'inscrire" textFill="WHITE">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <styleClass>
+                        <String fx:value="login-button" />
+                        <String fx:value="login-button-below" />
+                     </styleClass>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </FlowPane>
+      <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Images/logo.png" />
+               </image>
+               <HBox.margin>
+                  <Insets left="20.0" top="10.0" />
+               </HBox.margin>
+            </ImageView>
+            <Label styleClass="login-title" text="Statumun">
+               <HBox.margin>
+                  <Insets left="10.0" top="10.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
+   </children>
+</AnchorPane>
