--- a/src/assets/FXML/AdminScene.fxml
+++ b/src/assets/FXML/AdminScene.fxml
@@ -12,38 +12,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-    <AnchorPane prefHeight="509.0" prefWidth="741.0">
+
+<AnchorPane prefHeight="682.0" prefWidth="1116.0" stylesheets="@../CSS/current-styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
       <children>
          <ImageView fitHeight="45.0" fitWidth="58.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@../Images/logo.png" />
             </image></ImageView>
 
-         <Label layoutX="55.0" layoutY="12.0" prefWidth="84.0" text="Statumun">
+         <Label id="statumun" layoutX="55.0" layoutY="12.0" prefWidth="84.0" text="Statumun">
             <font>
                <Font name="Arial Black" size="20.0" />
             </font>
          </Label>
-         <FlowPane layoutX="159.0" layoutY="71.0" prefHeight="420.0" prefWidth="565.0" style="-fx-background-color: white; -fx-background-radius: 30;">
-            <children>
-               <GridPane alignment="CENTER" prefHeight="423.0" prefWidth="567.0">
-                 <columnConstraints>
-                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                 </columnConstraints>
-                 <rowConstraints>
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                 </rowConstraints>
-                  <children>
-                     <Label prefHeight="133.0" prefWidth="218.0" style="-fx-text-fill: black;" text="Home" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  </children>
-               </GridPane>
-            </children>
-         </FlowPane>
-         <GridPane layoutY="69.0" prefHeight="424.0" prefWidth="161.0">
+         <GridPane layoutX="909.0" layoutY="168.0" prefHeight="424.0" prefWidth="161.0">
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
            </columnConstraints>
@@ -64,5 +46,7 @@
                <Button fx:id="button_deco_register" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #FFB561;" text="Déconnexion" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
             </children>
          </GridPane>
-      </children></AnchorPane>
-</Scene>
+         <FlowPane prefHeight="820.0" prefWidth="348.0" />
+      </children>
+</AnchorPane>
+
