--- a/src/assets/FXML/admin_user.fxml
+++ b/src/assets/FXML/admin_user.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_user.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_user.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutY="63.2" prefHeight="682.0" prefWidth="1116.0" styleClass="adminpage-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -114,7 +114,7 @@
                               <HBox prefHeight="60.0" prefWidth="742.0" spacing="264.0">
                                  <children>
                                   <Button mnemonicParsing="false" onAction="#loadUserTableAdmin" prefHeight="60.0" prefWidth="245.0" styleClass="toolbar-button" text="Charger les utilisateurs" />
-                                    <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="245.0" styleClass="toolbar-button" text="Exporter en .CSV" />
+                                    <Button mnemonicParsing="false" onAction="#exportUsersToCSV" prefHeight="60.0" prefWidth="245.0" styleClass="toolbar-button" text="Exporter en .CSV" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="20.0" top="10.0" />
