--- a/src/assets/FXML/admin_user.fxml
+++ b/src/assets/FXML/admin_user.fxml
@@ -4,7 +4,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -120,11 +122,22 @@
                                     <Insets left="20.0" top="10.0" />
                                  </VBox.margin>
                               </HBox>
-                              <TableView fx:id="tableView_user_adminpage" editable="true" prefHeight="530.0" prefWidth="774.0">
+                              <TableView fx:id="tableView_user_adminpage" editable="true" prefHeight="430.0" prefWidth="774.0">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
                                  </VBox.margin>
                               </TableView>
+                              <HBox prefHeight="90.0" prefWidth="752.0">
+                                 <children>
+                                    <Label text="   " />
+                                    <TextField fx:id="textField_username_adduser" maxWidth="250.0" minHeight="36.0" promptText="Nom d'utilisateur" styleClass="register-inputs" />
+                                    <TextField fx:id="textfield_mail_adduser" maxWidth="250.0" minHeight="36.0" promptText="Mail" styleClass="register-inputs" />
+                                    <TextField fx:id="textfield_phone_adduser" maxWidth="250.0" minHeight="36.0" promptText="Numéro de Téléphone" styleClass="register-inputs" />
+                                    <TextField fx:id="textField_role_adduser" maxWidth="250.0" minHeight="36.0" promptText="Rôle" styleClass="register-inputs" />
+                                    <PasswordField fx:id="textfield_psswrd_adduser" maxWidth="250.0" minHeight="36.0" promptText="Mot de passe" styleClass="register-inputs" />
+                                    <Button mnemonicParsing="false" onAction="#addNewUserToDatabase" text="Add" />
+                                 </children>
+                              </HBox>
                            </children>
                            <FlowPane.margin>
                               <Insets />
